--- a/postpartum/assessment.html
+++ b/postpartum/assessment.html
@@ -6,7 +6,7 @@
     <title>Step 2: Diagnostic | Postpartum Powerhouse</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
-    
+    <script src="../funnel-nav.js"></script>
     <script>
         tailwind.config = {
             theme: {
