--- a/kinetic-protocol/booking.html
+++ b/kinetic-protocol/booking.html
@@ -139,6 +139,6 @@
             &copy; 2026 THE KINETIC PROTOCOL™. ALL RIGHTS RESERVED.
         </div>
     </footer>
-
+    <script src="../funnel-nav.js"></script>
 </body>
 </html>
