--- a/index.html
+++ b/index.html
@@ -300,6 +300,48 @@
                     </a>
                 </div>
             </div>
+            <div
+                class="group bg-sts-panel border border-sts-border hover:border-sts-gold transition-all duration-500 rounded-sm overflow-hidden hover:-translate-y-2 hover:shadow-[0_20px_50px_rgba(0,0,0,0.5)] flex flex-col h-full relative">
+
+                <div class="aspect-[16/9] bg-sts-black relative overflow-hidden border-b border-sts-border">
+                    <div
+                        class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1540555700478-4be289fbecef?q=80&w=2500&auto=format&fit=crop')] bg-cover bg-center opacity-60 grayscale group-hover:grayscale-0 group-hover:scale-105 transition-all duration-700">
+                    </div>
+                    <div class="absolute inset-0 bg-gradient-to-t from-sts-panel via-transparent to-transparent"></div>
+                </div>
+
+                <div class="p-8 flex-1 flex flex-col">
+                    <div class="mb-4">
+                        <p class="text-[10px] text-sts-gold uppercase tracking-[0.2em] font-bold mb-3">Niche: Executive
+                            Burnout</p>
+                        <h3
+                            class="text-2xl text-white font-display font-bold group-hover:text-sts-gold transition-colors">
+                            The Neuro-Resilience Architect</h3>
+                    </div>
+
+                    <p class="text-sm text-sts-muted leading-relaxed border-t border-sts-border pt-4 mb-6 flex-1">
+                        A "Clinical Luxury" funnel for high-performance women. Replaces "Hustle" copy with
+                        "Neuro-Biology" framing. Features a serif-heavy "Organic" aesthetic and a high-ticket
+                        application flow.
+                    </p>
+
+                    <div class="flex gap-2 flex-wrap mb-8">
+                        <span
+                            class="px-2 py-1 border border-sts-border text-[10px] text-sts-muted uppercase tracking-wider">Organic
+                            Luxury</span>
+                        <span
+                            class="px-2 py-1 border border-sts-border text-[10px] text-sts-muted uppercase tracking-wider">Medical/Scientific</span>
+                        <span
+                            class="px-2 py-1 border border-sts-border text-[10px] text-sts-muted uppercase tracking-wider">High
+                            Ticket</span>
+                    </div>
+
+                    <a href="./lumina-health/index.html"
+                        class="block w-full py-4 bg-sts-black border border-sts-border text-white text-center text-xs uppercase tracking-[0.2em] font-bold hover:bg-sts-gold hover:text-sts-black hover:border-sts-gold transition-all">
+                        Launch Simulation
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
